--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,6 @@
-.criminalsContainer {
-    display: flex;
-    flex-wrap: wrap;
-    background: #FFFAEA
-}
+@import "./criminals.css";
+@import "./filters.css";
+@import "./notes.css";
 
 .GlassdaleHeader {
 
@@ -28,20 +26,6 @@
     justify-content: space-between;
 }
 
-.filters {
-    align-items:left; 
-}
-.criminalsInfo {
-    flex-basis: 16%;
-    border: solid 3px  #F4C434;
-    padding: 1em;
-    margin: 1.5em;
-    box-shadow: 5px 5px 5px 5px #888888;
-}
-.criminalsInfo:hover {
-    background-color: #F4C434;
-    transition: all .5s ease-in-out;
-} 
 
 h2 {
     font-family: "Sinkin Sans";
@@ -52,3 +36,18 @@ h2 {
     letter-spacing: 3px;
     color:rgb(89, 89, 92);
 }
+
+.container {
+    display: flex;
+    flex-direction: column;
+    font-size: 1.25rem;
+}
+
+.listsContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+}
+
+
+
