--- a/styles/notes.css
+++ b/styles/notes.css
@@ -22,7 +22,7 @@
     padding: 20px;
 }
 
-#showAllNotes, #showNoteForm, #saveNote, #button--close {
+#showAllNotes, #showNoteForm, #saveNote, #button--close, #showAllWitnesses {
     background:linear-gradient(to bottom, #d8d0b4 5%, #6c7c7c 100%);
 	background-color:#e8dbb3;
 	border-radius:5px;
